...
        android:text="New Text"
        android:id="@+id/Username"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_below="@+id/welcomeTV"
        android:layout_alignRight="@+id/ProfileButton"
        android:layout_alignEnd="@+id/ProfileButton" />

    <Button
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:text="Profile"
...
        android:textColor="#000000" />

    <Button
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:text="Recent Movies"
        android:id="@+id/RecentMoviesButton"
        android:onClick="onRecentMoviesClick"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/MovieSearchButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#9bf5a70b"
...
