...

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Reviews"
        android:onClick="onViewReviewsClick"
        android:id="@+id/viewReviewB"
        android:layout_below="@+id/movieSynopsis"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
</ScrollView>
