<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="180px"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ProfilePageActivity"
        tools:showIn="@layout/activity_profile_page"
        android:background="#79f4cc2d"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Admin"
            android:id="@+id/displayUserName"
            android:textSize="25dp"
            android:layout_marginLeft="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_stacked_max_height"
            android:layout_weight="0.50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="First Name"
            android:id="@+id/FirstNametxt"
            android:layout_marginLeft="10dp"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/displayFirstName"
            android:layout_marginLeft="0dp"
            android:textColor="#817e7e" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Last Name"
            android:id="@+id/LastNametxt"
            android:layout_marginLeft="10dp"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/displayLastName"
            android:layout_marginLeft="0dp"
            android:textColor="#817e7e"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Student ID"
            android:id="@+id/StudentIDtxt"
            android:layout_marginLeft="10dp"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/displayStudentId"
            android:textColor="#817e7e"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Major"
            android:id="@+id/Majortxt"
            android:layout_marginLeft="10dp"
            android:textSize="18dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profileMajor"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="E-mail"
            android:id="@+id/Emailtxt"
            android:layout_marginLeft="10dp"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/displayEmail"
            android:textColor="#817e7e"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/saveButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/CancelButton"
            android:layout_gravity="center_horizontal"
            android:onClick="onProfileCancel" />


    </LinearLayout>
</ScrollView>